--- a/style.css
+++ b/style.css
@@ -64,12 +64,13 @@ h3{
     flex: 1 1 200px;
     margin: 1rem;
     padding: 1em;
+    min-width: 229px;
 }
 
 .book{
     background-color: white;
     border-radius: 6px;
-    height: 220px;
+    height: 240px;
     text-align: center;
 }
 
