--- a/style/style.css
+++ b/style/style.css
@@ -24,12 +24,12 @@ h1, h2{
 
 
 h1{
-    font-size: 2em;
+    font-size: 2.5em;
     font-weight: bold;
 }
 
 h2{
-    font-size: 1.5em;
+    font-size: 1.75em;
     font-weight: bold;
 }
 
@@ -80,7 +80,7 @@ h2{
 
 h3{
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 1.25rem;
     margin-bottom: 0;
     margin: 1em 0 .5em 0;
 }
@@ -114,7 +114,12 @@ h3{
 
 /*Stats Pane*/
 p.stat{
-    margin: 1em;
+    margin: 1em 1em 1em 2em;
+    font-size: 1.25em;
+    font-style: auto;
+}
+
+b{
     font-weight: bold;
 }
 
